# portfolio-tracker

./: .env.dummy  .env.dummy.env  README.md  pyproject.toml  requirements.txt
app/: config.py  data_fetching.py  gui.py  loader.py  metrics.py
data/: type1.csv  type2.csv  type3.csv
notebooks/: Untitled.ipynb  testing.ipynb
portfolio-tracker/: loader.py  metrics.py
portfolio_tracker/: app.py  config.py  data_fetching.py  format.py  gui.py  layout.py  loader.py  manager.py  metrics.py  plotter.py  utils.py
portfolio_tracker/assets/: dark_mode.css
