[project]
name = "portfolio-tracker"
version = "0.1.0"
description = ""
authors = ["magurh <magureanuhoria@gmail.com>"]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.1.1",
    "pandas>=2.2.2",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "tqdm>=4.66.5",
    "web3>=7.2.0",
    "seaborn",
    "matplotlib",
    "jupyterlab",
    "dash",
    "dash_bootstrap_components",
    "plotly>=5.24.1",
    "yfinance>=0.2.49",
    "ccxt>=4.4.31",
    "ffn>=1.1.1",
    "adjusttext>=1.3.0",
]

